--- a/frontend/src/components/Goal.css
+++ b/frontend/src/components/Goal.css
@@ -1,3 +1,19 @@
 .progressContainer{
-   margin:10px !important;
+   
+}
+.goalContainer{
+   padding:10px;
+   background-color: white;;
+ }
+.arrowRow{
+   display:flex;
+   justify-content: space-between;
+}
+.fig{
+   line-height: 20px;
+   padding-bottom: 5px;
+}
+.h1{
+   line-height: 20px;
+   padding-bottom: 5px;
 }
